--- a/index.html
+++ b/index.html
@@ -7,14 +7,152 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <title>Hola,mundo</title>
+    <link rel="stylesheet" href="css/main.css">
+    
+    <title>Home CabaniApp</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="jumbotron">
+    <h1>CabaniApp</h1>
+    </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <div class="container">
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+      <div class="row">
+        <div class="col">
+          <h3><strong>¿Cómo funciona?</strong></h3>
+          <p>Busca las cabañas deacuerdo a tus preferencias.</p>
+        </div>
+
+        <div class="col">
+          <h3><strong>¿Donde puedo reservar?</strong></h3>
+          <p>Elegi la provincia que mas te interese y luego realizá la reserva con tus datos.</p>
+        </div>
+
+        <div class="col">
+          <h3><strong>¿Como Págo?</strong></h3>
+          <p> Usa tu tarjeta favorita.</p>
+        </div>
+      </div>
+
+      <div class="d-flex flex-wrap flex-row-reverse">
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Buenos Aires</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>C.A.B.A </h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Catamarca</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Chaco</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Chubut</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>  
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Cordoba</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Corrientes</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Entre Rios</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Formosa</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Jujuy</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div> 
+        <div class="col-sm-3 justifi-content-between">
+          <h4>La Pampa</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>La Rioja</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Mendoza</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Misiones</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Neuquén</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div> 
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Rio Negro</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Salta</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>San Juan</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>San Luis</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Santa Cruz</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div> 
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Santa Fe</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Santiago del Estero</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Tierra del Fuego</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div> 
+        <div class="col-sm-3 justifi-content-between">
+          <h4>Tucumán</h4>
+          <button class="btn btn-primary">Reserva</button>
+        </div>
+      </div>
+     </div>
+
+     <footer>
+      <div class="row">
+        <div class="col-sm-4 d-flex flex-column">
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="#">Instagram</a>
+          <a href="#">Google+</a>
+        </div>
+        <div class="col-sm-4 d-flex flex-column align-items-end">
+          <a href="#">Nosotros</a>
+          <a href="#">Precios</a>
+          <a href="#">Terminos y Condiciones</a>
+          <a href="#">Contacto</a>
+        </div>
+      </div>
+     </footer>
+  
     <script src="node_modules/jquerry/dist/jquerry.min.js/"></script>
     <script src="node_modules/popper.js/dist/popper.min.js" ></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
