--- a/about.html
+++ b/about.html
@@ -16,16 +16,18 @@
     <nav class="navbar fixed-top  navbar-expand-md" style="background-color: #e7b242e9 ;"><!--Sirve para poner la barra de navegacion fija (Fixed-top)--> 
       <div class="container-fluid">
         <img src="/Imagenes/Logo.svg" alt="Bootstrap" width="30" height="48">
+        <a class="navbar-brand" href="#">CabaniApp</a>
       < <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-          <li class="nav-item active"><a class="nav-link" href="#">Nosotros</a></li>
+          <li class="nav-item active"><a class="nav-link" href="./about.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="/contacto.html">Contacto</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Precios</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Terminos y Condiciones</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+          
         </ul>
       </div>
     </nav>
