--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./about.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Precios</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Terminos y Condiciones</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+         
         </ul>
       </div>
     </nav>
@@ -35,7 +36,7 @@
     </div>
 
     <div class="container">
-      <nav style="--bs-breadcrumb-divider:'>';" aria-label="breadcrumb" >
+      <nav aria-label="breadcrumb"  >
         <ol class="breadcrumb">
           <li class="breadcrumb-item active" aria-current="page">Home</li>
         </ol>
